--- a/styles.css
+++ b/styles.css
@@ -419,7 +419,7 @@ header {
   }
   @media (max-width: 900px) {
     margin-inline: auto;
-    background-color: hotpink;
+    background-color: var(--white);
     grid-template-columns: 1fr;
     justify-items: center;
     & img {
@@ -544,6 +544,12 @@ footer {
     & li {
       margin-block: 1rem;
     }
+  }
+  input[type="text"] {
+    font-size: 1rem;
+    border: 0.5px solid black;
+    padding: 1rem 0.5rem;
+    margin: 0.1rem;
   }
 }
 
